--- a/finance/views/main.html
+++ b/finance/views/main.html
@@ -6,13 +6,16 @@
 
 		<ul>
 			<li>
-				<a href="#interest-spread">interest-spread</a>
+				<a href="#economy-leading-index">경기종합지수(선행지수)</a>
 			</li>
 			<li>
-				<a href="#currency-exchange-rates">currency-exchange-rates</a>
+				<a href="#interest-spread">경기선행지수(장단기금리차)</a>
 			</li>
 			<li>
-				<a href="#apartment-price-index">apartment-price-index</a>
+				<a href="#currency-exchange-rates">원달러환율</a>
+			</li>
+			<li>
+				<a href="#apartment-price-index">주택가격지수(아파트)</a>
 			</li>
 		</ul>
 
